--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
+    "nodemailer": "^6.9.15",
     "paypal-rest-sdk": "^1.8.1",
     "socket.io": "^4.7.5",
     "zod": "^3.23.8"
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.16",
     "@types/paypal-rest-sdk": "^1.7.9",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
